--- a/app/src/main/res/menu/bottom_teacher_menu.xml
+++ b/app/src/main/res/menu/bottom_teacher_menu.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/home"
         android:title="Home"
-        android:icon="@drawable/teacher_home"
+        android:icon="@drawable/home"
         />
 
     <item
