--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,16 @@
     </style>
 
     <style name="Theme.SchoolHub" parent="Base.Theme.SchoolHub" />
+
+    <style name="DialogAnimation">
+
+        <item name="android:windowEnterAnimation">@anim/slide_in</item>
+        <item name="android:windowExitAnimation">@anim/slide_out</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+
+    </style>
+
+
+
+
 </resources>
