--- a/app/src/main/res/layout/fragment_registrar_add_student.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_student.xml
@@ -28,67 +28,75 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:orientation="vertical"
-            android:background="#D9D9D9"
-            android:padding="16dp"
-            android:layout_marginBottom="24dp"
             android:layout_marginHorizontal="8dp"
-            android:elevation="2dp">
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="24dp"
+            android:background="#D9D9D9"
+            android:elevation="2dp"
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <EditText
+                android:id="@+id/edtStudentName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Full Name"
-                android:layout_marginBottom="12dp" />
+                android:layout_marginBottom="12dp"
+                android:hint="Full Name" />
 
             <EditText
+                android:id="@+id/edtDateOfBirth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Date Of Birth"
-                android:layout_marginBottom="12dp" />
+                android:layout_marginBottom="12dp"
+                android:hint="Date Of Birth" />
 
             <EditText
+                android:id="@+id/edtEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:hint="Email"
-                android:inputType="textEmailAddress"
-                android:layout_marginBottom="12dp" />
+                android:inputType="textEmailAddress" />
 
             <EditText
+                android:id="@+id/edtPhone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:hint="Phone"
-                android:inputType="phone"
-                android:layout_marginBottom="12dp" />
+                android:inputType="phone" />
 
             <EditText
+                android:id="@+id/edtClass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Class"
-                android:layout_marginBottom="12dp" />
+                android:layout_marginBottom="12dp"
+                android:hint="Class" />
 
             <EditText
+                android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:hint="Password"
-                android:inputType="textPassword"
-                android:layout_marginBottom="12dp" />
+                android:inputType="textPassword" />
 
             <EditText
+                android:id="@+id/edtEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
                 android:hint="Confirm Password"
-                android:inputType="textPassword"
-                android:layout_marginBottom="16dp" />
+                android:inputType="textPassword" />
 
             <Button
+                android:id="@+id/btnAddStudent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Student"
-                android:textColor="#FFFFFF"
+                android:layout_gravity="center"
                 android:backgroundTint="#8B0000"
-                android:layout_gravity="center" />
+                android:text="Add Student"
+                android:textColor="#FFFFFF" />
         </LinearLayout>
 
     </LinearLayout>
