--- a/app/src/main/res/layout/fragment_registrar_add_subject.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_subject.xml
@@ -37,6 +37,7 @@
         <!-- Subject Name -->
 
         <EditText
+            android:id="@+id/edtSubjectName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
@@ -45,6 +46,7 @@
 
         <!-- Subject Code -->
         <EditText
+            android:id="@+id/edtCode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
@@ -53,6 +55,7 @@
 
         <!-- Grade Level -->
         <EditText
+            android:id="@+id/edtGradeLevel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
@@ -61,6 +64,7 @@
 
         <!-- Subject Type -->
         <EditText
+            android:id="@+id/edtType"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -68,6 +72,7 @@
             android:hint="Subject type" />
 
         <Button
+            android:id="@+id/btnAddSubject"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
