--- a/app/src/main/res/layout/fragment_registrar_add_teacher.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_teacher.xml
@@ -9,7 +9,16 @@
 
 
     <!-- Title -->
-
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Teacher"
+        android:textColor="#800000"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="134dp"
+        tools:layout_editor_absoluteY="104dp" />
     <!-- Form Container -->
 
     <LinearLayout
@@ -28,54 +37,60 @@
 
         <!-- Input Fields -->
         <EditText
+            android:id="@+id/edtTeacherName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Full Name"
             android:inputType="textPersonName" />
 
         <EditText
+            android:id="@+id/edtName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
             android:inputType="textEmailAddress" />
 
         <EditText
+            android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Phone"
             android:inputType="phone" />
 
         <EditText
+            android:id="@+id/edtDegree"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Degree" />
 
         <Spinner
-            android:id="@+id/subjectSpinner"
+            android:id="@+id/spnSubjects"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:prompt="@string/select_subject" />
 
         <Spinner
-            android:id="@+id/classSpinner"
+            android:id="@+id/spnClasses"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:prompt="@string/select_class" />
 
         <EditText
+            android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
             android:inputType="textPassword" />
 
         <EditText
+            android:id="@+id/edtConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Confirm Password"
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/addTeacherButton"
+            android:id="@+id/btnAddTeacher"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
@@ -85,16 +100,7 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Teacher"
-        android:textColor="#800000"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="104dp" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
