--- a/app/src/main/res/layout/fragment_student_marks.xml
+++ b/app/src/main/res/layout/fragment_student_marks.xml
@@ -5,16 +5,58 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E8ECEF"
     tools:context=".Student.StudentMarksFragment">
 
 
-
+    <!-- Title -->
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Student Marks"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="178dp" />
+        android:fontFamily="@font/inknut_antiqua_light"
+        android:text="My Schedule"
+        android:textColor="#800000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="134dp"
+        tools:layout_editor_absoluteY="69dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout >
+    <Spinner
+        android:id="@+id/spnSubject"
+        android:layout_width="335dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/search_background"
+        android:fontFamily="@font/inknut_antiqua"
+        android:hint="Select Subject"
+        android:padding="8dp"
+        android:spinnerMode="dropdown"
+        android:textColor="#000"
+        app:layout_constraintBottom_toTopOf="@id/txtTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtTitle"
+        app:layout_constraintVertical_bias="0.008" />
+
+
+    <ListView
+        android:layout_width="338dp"
+        android:layout_height="459dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/search_background"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="16dp"
+        android:padding="8dp"
+        android:scrollbars="vertical"
+        android:textColor="#000"
+
+        app:layout_constraintBottom_toTopOf="@id/spnSubject"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spnSubject"
+        app:layout_constraintVertical_bias="0.008" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
