--- a/app/src/main/res/layout/fragment_teacher_home.xml
+++ b/app/src/main/res/layout/fragment_teacher_home.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
@@ -13,9 +14,10 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="129dp"
+        android:layout_height="40dp"
         android:layout_marginTop="48dp"
+        android:fontFamily="@font/inknut_antiqua"
         android:text="DashBoard"
         android:textColor="#800000"
         android:textSize="20sp"
@@ -26,10 +28,11 @@
 
     <!-- Divider -->
     <TextView
-        android:id="@+id/greeting"
+        android:id="@+id/txtGreeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
+        android:fontFamily="@font/inknut_antiqua"
         android:text="Hello Ms. Sara!\nToday is Monday, May 6, 2025"
         android:textColor="#d9534f"
         android:textSize="14sp"
@@ -41,7 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="#000"
-        app:layout_constraintTop_toBottomOf="@id/greeting"
+        app:layout_constraintTop_toBottomOf="@id/txtGreeting"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp" />
@@ -49,33 +52,36 @@
     <!-- Today's Schedule -->
     <TextView
         android:id="@+id/today_schedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Today's Schedule"
-        android:textStyle="bold"
+        android:layout_width="183dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/inknut_antiqua"
+        android:text="What’s comming up?"
+        android:textColor="#7F0000"
         android:textSize="16sp"
-        android:textColor="#000"
-        app:layout_constraintTop_toBottomOf="@id/divider1"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@id/divider1" />
 
     <TextView
         android:id="@+id/schedule1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="• Math at 8:00AM - Class 9A"
+        android:layout_width="224dp"
+        android:layout_height="31dp"
+        android:fontFamily="@font/inknut_antiqua_light"
+        android:text="• Class: Math at 10:00Am"
         android:textColor="#000"
-        app:layout_constraintTop_toBottomOf="@id/today_schedule"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/today_schedule" />
 
     <TextView
         android:id="@+id/schedule2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="247dp"
+        android:layout_height="32dp"
+        android:fontFamily="@font/inknut_antiqua_light"
         android:text="• Physics at 11:30AM - Class 10A"
         android:textColor="#000"
-        app:layout_constraintTop_toBottomOf="@id/schedule1"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/schedule1" />
 
     <!-- Divider -->
     <View
@@ -93,59 +99,46 @@
         android:id="@+id/last_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Last Notification"
-        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        android:text="Featured Event "
+        android:textColor="#7E0000"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/divider2"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@id/divider2" />
 
     <TextView
         android:id="@+id/notification1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="• Science Fair - Friday, May 10 @ IT"
-        app:layout_constraintTop_toBottomOf="@id/last_notification"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/notification2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="• Science Fair - Friday, May 10 @ IT"
-        app:layout_constraintTop_toBottomOf="@id/notification1"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/notification3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="• Science Fair - Friday, May 10 @ IT"
-        app:layout_constraintTop_toBottomOf="@id/notification2"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:text="• Science Fair  -Friday, May 10 at  IT"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/last_notification" />
 
     <!-- Divider -->
+
+    <!-- Class Snapshot -->
     <View
         android:id="@+id/divider3"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="#000"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/notification3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        tools:layout_editor_absoluteY="378dp" />
 
-    <!-- Class Snapshot -->
     <TextView
         android:id="@+id/class_snapshot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Class Snapshot"
-        android:textStyle="bold"
+        android:textColor="#E9EDF0"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/divider3"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@id/divider3" />
 
     <TextView
         android:id="@+id/snapshot_data"
@@ -171,12 +164,12 @@
         android:id="@+id/recent_submissions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Recent Submissions"
-        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        android:text="Performence Sanphot"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/divider4"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@id/divider4" />
 
     <TextView
         android:id="@+id/submission1"
