--- a/app/src/main/res/layout/fragment_student_events.xml
+++ b/app/src/main/res/layout/fragment_student_events.xml
@@ -9,23 +9,25 @@
     tools:context=".Student.StudentMarksFragment">
 
     <!-- Title -->
-    <TextView
-        android:id="@+id/txtTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/inknut_antiqua_light"
-        android:text="My Marks"
-        android:textColor="#800000"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="152dp"
-        tools:layout_editor_absoluteY="32dp" />
 
     <!-- Filter Buttons Container -->
 
     <!-- Background Bar (Optional) -->
 
     <!-- ListView -->
+
+    <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/inknut_antiqua_light"
+        android:text="Upcoming Events"
+        android:textColor="#800000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="107dp"
+        tools:layout_editor_absoluteY="32dp" />
+
     <ListView
         android:id="@+id/lstBooks"
         android:layout_width="376dp"
