--- a/app/src/main/res/layout/fragment_teacher_schedule.xml
+++ b/app/src/main/res/layout/fragment_teacher_schedule.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/spnDay"
+        android:id="@+id/spnSubject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="148dp"
@@ -65,7 +65,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.484"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/spnDay"
+            app:layout_constraintTop_toBottomOf="@id/spnSubject"
             app:layout_constraintVertical_bias="0.538" />
     </LinearLayout>
 
