--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/abril_fatface</item>
         <item>@font/adamina</item>
+        <item>@font/akaya_kanadaka</item>
+        <item>@font/alatsi</item>
+        <item>@font/aldrich</item>
         <item>@font/inknut_antiqua</item>
         <item>@font/inknut_antiqua_light</item>
     </array>
