add Notification and Setting UI

--- a/app/src/main/res/layout/activity_student_main.xml
+++ b/app/src/main/res/layout/activity_student_main.xml
@@ -76,7 +76,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:background="@android:color/transparent"
+                app:itemIconTint="@color/dark_red"
+                app:itemTextColor="@color/dark_red"
                 app:labelVisibilityMode="labeled"
+                android:fitsSystemWindows="true"
                 app:menu="@menu/bottom_student_menu" />
         </com.google.android.material.bottomappbar.BottomAppBar>
 
