--- a/app/src/main/res/layout/fragment_student_calendar.xml
+++ b/app/src/main/res/layout/fragment_student_calendar.xml
@@ -26,7 +26,8 @@
         android:textSize="20sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="107dp"
-        tools:layout_editor_absoluteY="32dp" />
+        tools:layout_editor_absoluteY="32dp"
+        tools:ignore="MissingConstraints" />
 
     <ListView
         android:id="@+id/lstBooks"
